[tool.poetry]
name = "openai_inference"
version = "0.1.0"
description = ""
authors = ["gokamoda <gokamoda@gmail.com>"]
readme = "README.md"
packages = [{include = "openai_inference"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.40"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
mypy = "^1.9.0"
ipython = "^8.25"
python-dotenv = "^1.0"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"